Resolved MD5 vulnerability; implemented Google OAuth Open ID Connect

--- a/src/main/java/util/config.properties
+++ b/src/main/java/util/config.properties
@@ -5,4 +5,4 @@ username=root
 password=1234
 
 # query paths
-queryPath=C:\\dinuvi\\developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
+queryPath=D:\\Gayashaan\\Developments\\goflow\\src\\main\\webapp\\WEB-INF\\Query\\Query.xml
