--- a/classes/artifacts/goflow_Web_exploded/WEB-INF/web.xml
+++ b/classes/artifacts/goflow_Web_exploded/WEB-INF/web.xml
@@ -335,4 +335,8 @@
     <servlet-name>AdminLogin</servlet-name>
     <url-pattern>/AdminLogin</url-pattern>
   </servlet-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/error/404.jsp</location>
+    </error-page>
 </web-app>
